# demo

./: .gitignore  CMakelists.txt
api/20260225_mduserapi64_se_windows/: error.xml  thostmduserapi_se.lib
api/20260225_traderapi64_se_windows/: ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h  thosttraderapi_se.lib
src/: backtest_main.cpp  logger.cpp  logger.h  main.cpp  md_spi.cpp  md_spi.h  trader_spi.cpp  trader_spi.h
src/analyze/: cal.hpp
src/analzye/: cal.cpp
src/backtest/: backtest_data.hpp  backtest_engine.cpp  backtest_engine.h  mock_data_source.h  mock_trader.h  test1.cpp  test2.py
src/common/: auto_config.h  types.h
src/config/: config.cpp  config.h  config.json
src/datasource/: CMakeLists.txt  ctp.cpp  fromsina.hpp  isource.h  market_cache.cpp  market_cache.h  market_data.cpp  market_data.h  market_service.cpp  market_service.h  market_types.h  md_spi.cpp  sina.h  trader_interface.h  trader_spi.h
src/datasource/akshare/: akshare_data_source.cpp  akshare_data_source.h  akshare_worker.py
src/datasource/akshare/akshare/: akshare_worker.py
src/datasource/ctp/: ctp.cpp  ctp_trader.cpp  ctp_trader.h  md_spi.cpp  md_spi.h  trader_spi.cpp  trader_spi.h
src/datasource/gui/: CMakeLists.txt  gui_trader.cpp  gui_trader.h  main.cpp  win32_auto.cpp  win32_auto.h  win32_util.cpp  win32_util.h  winmain.cpp
src/datasource/gui_operator/: win32_auto.hpp
src/datasource/https/: czce_data_source.cpp  czce_data_source.h  dce_data_source.cpp  dce_data_source.h  market_data.cpp  test_https.cpp
src/datasource/mysql_db/: black_a01_15mk_detail.sql  black_a01_dayk_all.sql  db.hpp  mysql_data_source.cpp  mysql_data_source.h
src/datasource/persistent/: add.cpp  mysql_db.hpp  tick_data_persister.cpp  tick_data_persister.h
src/datasource/python/: smile.py  tqdata.py
src/datasource/sina/: main.cpp  sina.hpp  sina_data_source.cpp  sina_data_source.h
src/evaluation/: evaluation_report.cpp  evaluation_report.h
src/gui_operator/: CMakeLists.txt  win32_auto.cpp  win32_auto.hpp  win_oper.cpp  win_oper.hpp
src/includes/: market_data.hpp
src/log/: logger.cpp  logger.h
src/model/qlib/: backtest_main.cpp  custom_futures_handler.py  downd.py  download_futures_for_qlib.py  download_futures_for_qlib_with_minute.py  download_futures_minute.py  fetch_contract_details.py  futures_daily_20200101_to_20241231.csv  gen.bat  my_strategy.h  prediction_loader.cpp  (+10 more)
src/nets/: cl.cpp
src/news/: NewsClient.h  fetch_news.py  news_client.cpp  news_service.py
src/predict/: tfs_predict.h  tfs_server.py  ts_predict.cpp
src/protos/: news_analyze.proto  timesfm.proto
src/risk/: risk_config.h  risk_manager.cpp  risk_manager.h
src/state_machine/: account.cpp  account.h  account_view.cpp  settlement.cpp  settlement.h
src/status/: CMakeLists.txt  account.cpp  account.h  main.cpp  monitor.cpp  monitor.h  settlement.cpp  settlement.h
src/strategy/: CMakeLists.txt  event_system.h  istrategy .h  kline.cpp  kline.h  main.cpp  market_analyzer.cpp  market_analyzer.h  strategy.h  strategy1.cpp  strategy2.cpp  strategy3.cpp
src/tests/: offline_test.py
src/utils/: db.h  logger.cpp  logger.h  oder_def.h  oder_machine.h  odre_machine.cpp  t.sql  trading_hours.cpp  trading_hours.h
src/web/: index.html
(+17 files in other folders)
